# allan-variance

./: .gitignore  LICENSE.txt  README.md  allan_variance.py  example.ipynb  pyproject.toml
allan_variance/: __init__.py  avar.py
allan_variance/tests/: test_avar.py  test_noise.py
avar/: avar.py  noise.py
avar/tests/: test_avar.py
